<resources>
    <string name="app_name">LocationPinned</string>
    <string name="mortgage_details_header">Mortgage Details</string>
    <string name="mortgage_principal_amount">Mortgage Principal Amount:</string>
    <string name="enter_principal_amount">Enter Principal Amount</string>
    <string name="interest_rate">Interest Rate (%):</string>
    <string name="amortization_period_in_years">Amortization Period (in years):</string>
    <string name="enter_amortization_period">Enter Amortization Period</string>
    <string name="calculate">Calculate</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
</resources>